2007-12-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* progmodes/cc-vars.el (defcustom-c-stylevar): Eval VAL.
	(c-comment-continuation-stars): No longer declare with
	cc-bytecomp-obsolete-var and cc-bytecomp-defvar.
	(c-block-comment-prefix): Use symbol-value to
	access c-comment-continuation-stars.
	* progmodes/cc-mode.el (c-initialize-cc-mode):
	Use symbol-value to access c-comment-continuation-stars.

2007-12-18  Mark A. Hershberger  <mah@everybody.org>

	* xml.el (xml-escape-string): New function.  Escape string using
	xml-entity-alist.
	(xml-debug-print-internal): Use xml-escape-string to escape
	characters in attributes and in text children of elements.

2007-12-18  Glenn Morris  <rgm@gnu.org>

	* progmodes/cc-subword.el (c-subword-mode): Drop support for
	systems without define-minor-mode.

	* progmodes/cc-vars.el (defcustom-c-stylevar): Remove debugging
	message.

	* progmodes/verilog-mode.el: Replace all instances of
	string-to-int with string-to-number, insert-string with insert,
	and read-input with read-string.
	(top-level): No need to require imenu, reporter, dinotrace, vc,
	font-lock when compiling.  Always require compile.  Relegate remaining
	compatibility cruft to XEmacs.  Don't require font-lock.
	(verilog-version): Remove superfluous concat.
	(dinotrace-unannotate-all, zmacs-activate-region)
	(customize-apropos): No need to define.
	(verilog-regexp-opt): On Emacs, just make it an alias for regexp-opt.
	(verilog-font-lock-keywords, verilog-font-lock-keywords-1)
	(verilog-font-lock-keywords-2, verilog-font-lock-keywords-3)
	(verilog-startup-message-displayed): These are variables, not constants.
	(verilog-batch-execute-func, verilog-auto-inst)
	(verilog-auto-inst-param): Use mapc rather than mapcar.
	(sigs-in, sigs-inout, sigs-out): Define for compiler rather than
	actually defining.
	(verilog-modi-get-decls, verilog-modi-get-sub-decls)
	(verilog-modi-get-outputs, verilog-modi-get-inouts)
	(verilog-modi-get-inputs, verilog-modi-get-wires)